# websocket-serial-server

./: .buildconfig  .gitignore  .travis.yml  Cargo.toml  DOCUMENTATION.md  README.md  rustfmt.toml
src/: main.rs  websockets.html
src/lib/: cfg.rs  configuration.rs  dynamic_sleep.rs  errors.rs  manager.rs  messages.rs  mod.rs  port_manager.rs  serial_port_actor.rs  serial_port_arbiter.rs  sub_manager.rs  websocket_client_actor.rs  writelock_manager.rs
src/lib-legacy/: cfg.rs  common.rs  errors.rs  manager.rs  messages.rs  mod.rs  port_manager.rs  writelock_manager.rs
src/serial_support/: cfg.rs  common.rs  dynamic_sleep.rs  errors.rs  manage.rs  messages.rs  mod.rs  port_manager.rs  sub_manager.rs  writelock_manager.rs
